# chatgpt-as-coding-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bench/: README.md  __init__.py  cases.json  results.md  verify.py
bench/fixture_seed/: attachments.py  order_model.py  order_store.py  pricing.py  reporting.py  users.py
docs/: CHECKLIST.md  COCKPIT_DESIGN.md  COMPARISON.md  MANUAL.md  ROADMAP.md  STATE.md  WORK_SESSION.md
docs/plans/: 2026-07-16-codex-workbench-redesign.md
docs/skills/: harness-effort.md  harness-loops.md  harness-ultra.md
docs/specs/: DEVIATIONS.md  four-controls-first-flight.md  four-controls-progress.md  four-controls-spec.md  four-controls-walkthrough.md
harness/: __init__.py  __main__.py  allowlist.py  app.py  config.py  context.py  events.py  evidence.py  executor.py  federation.py  hooks.py  lsp.py  middleware.py  observations.py  permissions.py  policy.py  proc.py  processes.py  result.py  rules.py  scrub.py  security.py  server.py  session.py  statefile.py  userhooks.py
harness/cockpit/: __init__.py  server.py  supervisor.py
harness/tasks/: __init__.py  contracts.py  effort.py  model.py  store.py  tools.py
harness/tools/: __init__.py  codeintel.py  diagnostics.py  files.py  git.py  gitcmd.py  images.py  memory.py  notebook.py  process.py  repomap.py  search.py  shell.py  skills.py  todos.py  vcs.py  workspace.py  worktree.py
scripts/: funnel.ps1  funnel.sh  run.ps1  run.sh  stop-funnel.ps1
tests/: conftest.py  test_apply_edits.py  test_approval_wait.py  test_benchmarks.py  test_cockpit.py  test_code_intel.py  test_completion_gates.py  test_connector_log.py  test_data_integrity.py  test_effort_ledger.py  test_exec_boundary.py  test_executor.py  test_federation.py  test_federation_gating.py  test_four_controls_config.py  test_framework_row.py  test_git.py  test_hooks.py  test_idempotency.py  test_isolation.py  test_lifecycle_audit.py  test_loops.py  test_lsp.py  test_memory.py  test_memory_tiers.py  test_mode_ceiling.py  test_no_task_fallback.py  test_observations.py  test_packaging.py  test_permissions.py  test_phase0.py  test_phase3.py  test_policy.py  test_process_ownership.py  test_processes.py  test_quality_fixes.py  test_roots_cli.py  test_rules_and_hooks.py  test_scrub.py  test_security.py  (+16 more)
(+10 files in other folders)
