[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-code-harness"
version = "0.1.0"
description = "A local MCP coding server driven by ChatGPT — ChatGPT is the brain, this is the hands."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
harness = "harness.__main__:main"

[tool.setuptools]
packages = ["harness", "harness.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
